--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -21,6 +21,8 @@
           </div>
         </div>
       </div>
+      {% empty %}
+        <li>Sorry, no image is uploaded yet.</li>
       {%endfor%}
     </div>
   </div>
